Bug 510282 - Discover - progress indicator / bar "Tasks" sometimes disappears during updates
Summary: Discover - progress indicator / bar "Tasks" sometimes disappears during updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 6.4.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-06 00:12 UTC by Gauthier
Modified: 2026-05-19 16:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments
Screencast of the issue (1.55 MB, video/webm)
2025-10-08 09:58 UTC, Gauthier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gauthier 2025-10-06 00:12:29 UTC
When I launch an update, the progress shows up for a bit (possibly only during the download phase) and then disappear. Updates are still happening but there is no more overall progress bar so I how far along it is.

See related reddit post: https://www.reddit.com/r/kde/comments/1lp1idx/comment/n5xy6bt/?context=3

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 PRO 6650U with Radeon Graphics
Memory: 32 GiB of RAM (30.7 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 1 john.liptrot 2025-10-06 14:43:56 UTC
When you say "the progress bar", are you referring to "tasks" that appears when you initiate a download in discover?

I cannot reproduce this. Started a download of GIMP in discover. Tasks appears with the progress bar and does not disappear until the download is finished.

Are you familiar with the KDE app "Spectacle"? Could you attach a short screen recording showing this behaviour?

Thanks!

Operating System: KDE Linux 2025-09-20
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 2 × Intel® Pentium® 3805U @ 1.90GHz
Memory: 4 GiB of RAM (3.7 GiB usable)
Graphics Processor: Intel® HD Graphics
Manufacturer: LENOVO
Product Name: 80EW
System Version: Lenovo B50-80
Comment 2 Gauthier 2025-10-06 14:55:20 UTC
(In reply to john.liptrot from comment #1)
> When you say "the progress bar", are you referring to "tasks" that appears
> when you initiate a download in discover?
> 
> I cannot reproduce this. Started a download of GIMP in discover. Tasks
> appears with the progress bar and does not disappear until the download is
> finished.
> 
> Are you familiar with the KDE app "Spectacle"? Could you attach a short
> screen recording showing this behaviour?
> 
> Thanks!
> 
> Operating System: KDE Linux 2025-09-20
> KDE Plasma Version: 6.5.80
> KDE Frameworks Version: 6.19.0
> Qt Version: 6.9.2
> Kernel Version: 6.16.7-arch1-1 (64-bit)
> Graphics Platform: Wayland
> Processors: 2 × Intel® Pentium® 3805U @ 1.90GHz
> Memory: 4 GiB of RAM (3.7 GiB usable)
> Graphics Processor: Intel® HD Graphics
> Manufacturer: LENOVO
> Product Name: 80EW
> System Version: Lenovo B50-80

Thank you for your reply. Yes I do refer to "Tasks" section that appears on the bottom left when you initiate an update. However the issue is only when doing an update, not when simply installing an app. My system is all up to date right now but I'll post a recording next time there is an update (indeed very familiar with Spectacle 🙂). It "seems" like (I'm not entirely sure) the section disappear after the download is done instead of lasting for the the full download + install.
Comment 3 Gauthier 2025-10-06 14:56:20 UTC
Btw I can also reproduce this on another machine running freshly installed Fedora 43 (KDE) beta.
Comment 4 Nate Graham 2025-10-07 19:38:54 UTC
A screen recording would be helpful, yeah.
Comment 5 Gauthier 2025-10-08 09:58:37 UTC
Created attachment 185597 [details]
Screencast of the issue

Find a screen recording attached. As you can see, as I launch the update the Task bar appears with the % progress indicator, then disappear, but the update is still going and completes fine (I didn't record until it completes otherwise it'd make the file big...and would be quite boring 😅). In fact you can still see the overall progress happening in the green indicator of the Task Manager Icon.
Comment 6 Nate Graham 2025-10-08 19:15:16 UTC
I suspect that I may know what's going on here: at a certain point, there are 0 tasks ongoing for some reason, so the logic to hide the progress indicator gets triggered, resulting in an awkward effect. We should probably also always keep it visible if updates are in progress, even if there are no active tasks (maybe they got queued for some reason).
Comment 7 Gauthier 2025-10-14 14:38:26 UTC
Just to add to this, I've just checked today and when click on Tasks right after launching an update, the Task progression pop up shows up and from their I can follow the full progression, and I can see that the Tasks progress indicator on the bottom left of discover disappears once download phase is finished and doesn't show progress of the installation phase (the pop up stays up though). I hope this helps.
Comment 8 bsduck 2025-10-28 00:23:11 UTC
I noticed the same issue on both Fedora and openSUSE Tumbleweed. I don't get any progress bar anymore, which makes me think the update process froze while it's in fact working silently in the background without user feedback. This bug appeared in Plasma 6.4, it was working fine in 6.3.
Comment 9 livechatter 2026-01-12 11:20:23 UTC
Still an issue with Discover 6.5.4
Plasma 6.5.4 on Fedora 43
KDE Frameworks 6.22
Qt 6.10.1
Comment 10 livechatter 2026-01-19 18:20:42 UTC
Still an issue with Discover 6.5.5
Plasma 6.5.5 on Fedora 43
KDE Frameworks 6.22
Qt 6.10.1
Comment 11 Gauthier 2026-03-17 13:21:42 UTC
Still present in:
============

Operating System: Fedora Linux 43
KDE Plasma Version: 6.6.2
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 6.19.8-200.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ Ultra 7 258V

Slightly surprise this is not getting more attention as I see bug fixes in Discovers with each new Plasma point releases and Nate implied this shouldn't be a big deal to fix, yet it is quite disturbing. For me no update progress bar is shown at all if there are only system updates or updates from non flatpack repo, which really is not ideal.
Comment 12 livechatter 2026-03-31 06:27:58 UTC
Still an issue with Discover 6.6.2
Plasma 6.6.3 on Fedora 43
KDE Frameworks 6.24.0
Qt 6.10.2
Comment 13 livechatter 2026-05-07 08:05:25 UTC
Still an issue on:
Still an issue with Discover 6.6.4
Plasma 6.6.4 on Fedora 44
KDE Frameworks 6.25.0
Qt 6.10.3
Comment 14 Bug Janitor Service 2026-05-08 10:58:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1322
Comment 15 Nate Graham 2026-05-19 16:04:27 UTC
Git commit 0905678bf27f8f1300a955e5337259c558973a69 by Nate Graham, on behalf of Taras Oleksyn.
Committed on 19/05/2026 at 15:52.
Pushed by ngraham into branch 'master'.

transaction: Fix progress indicator blip during updates

M  +4    -1    discover/qml/ProgressView.qml
M  +9    -0    libdiscover/Transaction/TransactionModel.cpp
M  +3    -0    libdiscover/Transaction/TransactionModel.h

https://invent.kde.org/plasma/discover/-/commit/0905678bf27f8f1300a955e5337259c558973a69