transaction: Fix progress indicator blip during updates

BUG: 510282